--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": false,
   "license": "MIT",
   "devDependencies": {
+    "@esbuild/linux-arm64": "^0.21.5",
     "autoprefixer": "^10.4.19",
     "esbuild": "^0.21.5",
     "esbuild-style-plugin": "^1.6.3",
