--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "@esbuild/linux-arm64": "^0.21.5",
+    "@esbuild/linux-x64": "^0.21.5",
     "autoprefixer": "^10.4.19",
     "esbuild": "^0.21.5",
     "esbuild-style-plugin": "^1.6.3",
