--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@esbuild/linux-arm64": "^0.21.5",
     "@esbuild/linux-x64": "^0.21.5",
+    "@types/d3": "^7.4.3",
     "autoprefixer": "^10.4.19",
     "esbuild": "^0.21.5",
     "esbuild-style-plugin": "^1.6.3",
@@ -15,6 +16,7 @@
     "typescript": "^5.5.2"
   },
   "dependencies": {
+    "d3": "^7.9.0",
     "htmx.org": "^1.9.12"
   }
 }
