--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@esbuild/linux-arm64": "^0.21.5",
     "@esbuild/linux-x64": "^0.21.5",
     "@types/d3": "^7.4.3",
+    "@types/luxon": "^3.4.2",
     "autoprefixer": "^10.4.19",
     "esbuild": "^0.21.5",
     "esbuild-style-plugin": "^1.6.3",
@@ -16,7 +17,9 @@
     "typescript": "^5.5.2"
   },
   "dependencies": {
-    "d3": "^7.9.0",
-    "htmx.org": "^1.9.12"
+    "chart.js": "^4.4.3",
+    "chartjs-adapter-luxon": "^1.3.1",
+    "htmx.org": "^1.9.12",
+    "luxon": "^3.4.4"
   }
 }
